<resources>
    <string name="app_name">JVC Projector Remote Control</string>
    <string name="power_on">Power ON</string>
    <string name="power_off">Power OFF</string>
    <string name="connection_status">Connection Status:</string>
    <string name="power_status">Power Status:</string>
    <string name="ip_address_port">IP_address_port</string>
    <string name="hdmi_2">HDMI 2</string>
    <string name="input">Input:</string>
    <string name="hdmi_1">HDMI 1</string>
    <string name="pictureMode">Picture Mode:</string>
    <string name="pictureModeNatural">Natural</string>
    <string name="pictureModeCinema">Cinema</string>
    <string name="pictureModeHDR">HDR</string>
    <string name="pictureModeFilm">Film</string>
    <string name="pictureModeTHX">THX</string>
    <string name="pictureModeUser1">User1</string>
</resources>